--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol>
+		<li>Iphone</li>
+		<li>Laptop</li>
+		<li>House</li>
+	</ol>
+
+	<ul>
+		<li>Oman</li>
+		<li>USA</li>
+		<li>Kedarnath</li>
+	</ul>
 
 </body>
 
