--- a/main.html
+++ b/main.html
@@ -10,13 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	
 	<ol>
-		<li>Iphone</li>
+		<li>shoppingList</li>
+		<li >Iphone</li>
 		<li>Laptop</li>
 		<li>House</li>
 	</ol>
 
 	<ul>
+		<li>holidayList</li>
 		<li>Oman</li>
 		<li>USA</li>
 		<li>Kedarnath</li>
