--- a/main.html
+++ b/main.html
@@ -12,18 +12,20 @@
 </script>
 	
 	<ol>
-		<li>shoppingList</li>
-		<li >Iphone</li>
-		<li>Laptop</li>
-		<li>House</li>
+		 <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Headphones</li>
 	</ol>
-
-	<ul>
-		<li>holidayList</li>
+	
+	<holidayList>
+	<ul >
 		<li>Oman</li>
 		<li>USA</li>
 		<li>Kedarnath</li>
 	</ul>
+		<li data-ns-test="holidayList">Paris</li>
+        <li data-ns-test="holidayList">Tokyo</li>
+        <li data-ns-test="holidayList">Maldives</li>
 
 </body>
 
